# feedback-app-backend

./: Cargo.toml  README.md  Shuttle.toml  sqlx-data.json
migrations/: 1_setup.sql  2_seed.sql
src/: appstate.rs  lib.rs  main.rs  request.rs  schema.rs  validation.rs
src/comment/: mod.rs  new.rs  reply.rs
src/feedback/: all.rs  edit.rs  get.rs  mod.rs  new.rs  upvote.rs
tests/api/: feedback.rs  helpers.rs  main.rs  schema.rs
