[package]
name = "rf-feedback-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = { version = "0.6.4", features = ["macros"] }
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
sync_wrapper = "0.1.1"
tower-http = { version = "0.3.5", features = ["cors"] }
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
