[package]
name = "rf-feedback-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
axum = { version = "0.6.4", features = ["macros"] }
http-body = "0.4.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shuttle-service = { version = "0.9.0", features = ["web-axum"] }
sync_wrapper = "0.1.1"
thiserror = "1.0.38"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = { version = "0.1.37", features = ["attributes"] }
validator = { version = "0.16.0", features = ["derive"] }
