[package]
name = "rf-feedback-app"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.63"
axum = { version = "0.6.4", features = ["macros"] }
http-body = "0.4.5"
serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"
shuttle-axum = "0.21.0"
shuttle-shared-db = { version = "0.21.0", features = ["postgres"] }
shuttle-runtime = "0.21.0"
sqlx = { version = "0.6.2", features = ["runtime-tokio-native-tls", "postgres", "migrate", "offline"] }
tokio = "1.28.2"
sync_wrapper = "0.1.1"
thiserror = "1.0.38"
tower-http = { version = "0.3.5", features = ["cors", "trace"] }
tracing = { version = "0.1.37", features = ["attributes"] }
validator = { version = "0.16.0", features = ["derive"] }
dotenvy_macro = "0.15.7"
anyhow = "1.0.72"
